--- a/app/src/main/res/drawable/filter_option_color_selector.xml
+++ b/app/src/main/res/drawable/filter_option_color_selector.xml
@@ -5,6 +5,6 @@
         android:state_selected="true" />
 
     <item
-        android:color="@color/grey_warm"
+        android:color="@color/gray_warm"
         android:state_selected="false" />
 </selector>
