--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,13 +4,13 @@
     <item name="red" type="color">#e60000</item>
     <item name="green_blue" type="color">#00b48f</item>
     <item name="red_pink" type="color">#ed344b</item>
-    <item name="grey_warm" type="color">#9b9b9b</item>
+    <item name="gray_warm" type="color">#9b9b9b</item>
     <item name="main_black" type="color">#323232</item>
     <item name="main_black_80" type="color">#CC323232</item>
     <item name="shadow_black_20" type="color">#33000000</item>
     <item name="white" type="color">#ffffff</item>
-    <item name="greyish_brown" type="color">#4a4a4a</item>
-    <item name="pinkish_grey" type="color">#bbbbbb</item>
+    <item name="grayish_brown" type="color">#4a4a4a</item>
+    <item name="pinkish_gray" type="color">#bbbbbb</item>
     <item name="c8c8c8" type="color">#c8c8c8</item>
 
 </resources> 
