--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,16 +6,16 @@
 
     </style>
 
-    <style name="ssom_font_9_pinkish_grey_single">
+    <style name="ssom_font_9_pinkish_gray_single">
         <item name="android:textSize">9sp</item>
-        <item name="android:textColor">@color/pinkish_grey</item>
+        <item name="android:textColor">@color/pinkish_gray</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="ssom_font_12_pinkish_grey_single">
+    <style name="ssom_font_12_pinkish_gray_single">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/pinkish_grey</item>
+        <item name="android:textColor">@color/pinkish_gray</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
@@ -41,16 +41,16 @@
         <item name="android:maxLines">2</item>
     </style>
 
-    <style name="ssom_font_12_greywarm">
+    <style name="ssom_font_12_gray_warm">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/grey_warm</item>
+        <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
     </style>
 
-    <style name="ssom_font_12_greywarm_bold">
+    <style name="ssom_font_12_gray_warm_bold">
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/grey_warm</item>
+        <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
     </style>
 
@@ -67,38 +67,38 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="ssom_font_16_greenblue">
+    <style name="ssom_font_16_green_blue">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/green_blue</item>
         <item name="android:typeface">normal</item>
     </style>
 
-    <style name="ssom_font_16_redpink">
+    <style name="ssom_font_16_red_pink">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
     </style>
 
-    <style name="ssom_font_16_greywarm">
+    <style name="ssom_font_16_gray_warm">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/grey_warm</item>
+        <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
     </style>
 
-    <style name="ssom_font_16_greyish_brown">
+    <style name="ssom_font_16_grayish_brown">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/greyish_brown</item>
+        <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
     </style>
 
-    <style name="ssom_font_16_white_single" parent="@android:style/TextAppearance.Medium">
+    <style name="ssom_font_16_white_single">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="ssom_font_16_white_bold_single" parent="@android:style/TextAppearance.Medium">
+    <style name="ssom_font_16_white_bold_single">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
@@ -106,9 +106,9 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="ssom_font_16_greyish_brown_single">
+    <style name="ssom_font_16_grayish_brown_single">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/greyish_brown</item>
+        <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
