개발분 반영

--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_black_80"
-    tools:context=".post.WriteActivity">
+    tools:context=".activity.SsomWriteActivity">
 
     <!-- title bar -->
     <LinearLayout
