--- a/app/src/main/res/drawable/bg_detail_round.xml
+++ b/app/src/main/res/drawable/bg_detail_round.xml
@@ -4,7 +4,7 @@
 
     <solid android:color="@color/white" />
 
-    <corners android:radius="25dip" />
+    <corners android:radius="25dp" />
 
     <stroke
         android:width="5dp"
