--- a/app/src/main/res/layout/detail_pager_adapter.xml
+++ b/app/src/main/res/layout/detail_pager_adapter.xml
@@ -8,6 +8,7 @@
         android:id="@+id/profile_img"
         android:layout_width="306dp"
         android:layout_height="248dp"
+        android:background="@drawable/detail_img_round"
         />
 
     <LinearLayout
