--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -18,8 +18,7 @@
             android:id="@+id/img_heart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/icon_heart_green" />
+            android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/img_close"
