--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,13 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ssom_font_9_c8c8c8_single">
+        <item name="android:textSize">9sp</item>
+        <item name="android:textColor">@color/c8c8c8</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="ssom_font_12_pinkish_gray_single">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/pinkish_gray</item>
@@ -63,6 +70,13 @@
     <style name="ssom_font_12_white_single">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ssom_font_12_grayish_brown_single">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/grayish_brown</item>
         <item name="android:typeface">normal</item>
         <item name="android:singleLine">true</item>
     </style>
@@ -119,4 +133,18 @@
         <item name="android:textColor">@color/main_black</item>
         <item name="android:typeface">normal</item>
     </style>
+
+    <!-- Dialog Theme -->
+    <style name="DialogTheme" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowTitleStyle">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
 </resources>
