--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,21 +10,23 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_heart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_width="33dp"
+            android:layout_height="31dp"
+            android:padding="5dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
+            android:layout_centerInParent="true"/>
 
         <ImageView
             android:id="@+id/img_close"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginRight="27dp"
+            android:padding="5dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="22dp"
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@id/img_heart"
             android:src="@drawable/icon_close_white"/>
