--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -7,22 +7,24 @@
     <!-- left profile image layout Start -->
     <FrameLayout
         android:id="@+id/profile_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="70dp"
         android:layout_marginLeft="12dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true">
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentLeft="true">
 
         <com.ssomcompany.ssomclient.common.CircularNetworkImageView
             android:id="@+id/icon_list_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:padding="1dp"/>
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginLeft="3dp"
+            android:layout_gravity="center_vertical"/>
 
         <ImageView
             android:id="@+id/icon_list_r"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="70dp"
             android:src="@drawable/icon_list_st_g" />
     </FrameLayout>
 
