chatting 리스트 작업.
messagemanager 작업.

--- a/app/src/main/res/layout/detail_pager_adapter.xml
+++ b/app/src/main/res/layout/detail_pager_adapter.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/bg_detail_round"
     tools:context=".fragment.DetailFragment">
 
-    <com.ssomcompany.ssomclient.common.RoundedNetworkImageView
+    <com.ssomcompany.ssomclient.widget.RoundedNetworkImageView
         android:id="@+id/profile_img"
         android:layout_width="306dp"
         android:layout_height="248dp"
