--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="5dp"
         android:layout_alignParentLeft="true">
 
-        <com.ssomcompany.ssomclient.common.CircularNetworkImageView
+        <com.ssomcompany.ssomclient.widget.CircularNetworkImageView
             android:id="@+id/icon_list_image"
             android:layout_width="64dp"
             android:layout_height="64dp"
