--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,10 @@
     <item name="grayish_brown" type="color">#4a4a4a</item>
     <item name="pinkish_gray" type="color">#bbbbbb</item>
     <item name="c8c8c8" type="color">#c8c8c8</item>
+    <item name="custom_515151" type="color">#515151</item>
+    <item name="custom_555555" type="color">#555555</item>
+    <item name="custom_e5e5e5" type="color">#e5e5e5</item>
+    <item name="custom_999999" type="color">#999999</item>
+    <item name="custom_4d4d4d" type="color">#4d4d4d</item>
 
 </resources> 
