--- a/app/src/main/res/layout/ssom_toolbar.xml
+++ b/app/src/main/res/layout/ssom_toolbar.xml
@@ -11,97 +11,103 @@
     app:contentInsetStart="0dp"
     android:layout_alignParentTop="true" >
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!-- ssom bar -->
+    <com.ssomcompany.ssomclient.widget.SsomActionBarView
+        android:id="@+id/ssom_action_bar"
         android:layout_width="match_parent"
-        android:layout_height="58.5dp"
-        android:id="@+id/custom_action_bar">
+        android:layout_height="wrap_content" />
 
-        <ImageView
-            android:id="@+id/lnb_menu_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="12dp"
-            android:padding="10dp"
-            android:src="@drawable/icon_top_menu"/>
+    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="58.5dp"-->
+        <!--android:id="@+id/custom_action_bar">-->
 
-        <RelativeLayout
-            android:id="@+id/toggle_bg"
-            android:layout_width="154dp"
-            android:layout_height="34dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10.5dp"
-            android:background="@drawable/bg_main_toggle">
-            <TextView
-                android:id="@+id/toggle_s_map"
-                style="@style/ssom_font_12_white_single"
-                android:layout_width="86dp"
-                android:layout_height="34dp"
-                android:background="@drawable/bg_main_toggle_on"
-                android:text="@string/map"
-                android:gravity="center"/>
-            <TextView
-                android:id="@+id/toggle_s_list"
-                style="@style/ssom_font_12_grayish_brown_single"
-                android:layout_width="86dp"
-                android:layout_height="34dp"
-                android:layout_alignParentRight="true"
-                android:text="@string/list"
-                android:gravity="center"/>
-        </RelativeLayout>
+        <!--<ImageView-->
+            <!--android:id="@+id/lnb_menu_btn"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginTop="12dp"-->
+            <!--android:padding="10dp"-->
+            <!--android:src="@drawable/icon_top_menu"/>-->
 
-        <TextView
-            android:id="@+id/chat_layout"
-            style="@style/ssom_font_12_gray_warm"
-            android:layout_width="34dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
-            android:layout_marginRight="6dp"
-            android:layout_alignParentRight="true"
-            android:drawableTop="@drawable/icon_chat"
-            android:drawablePadding="1.5dp"
-            android:gravity="center"
-            android:text="5"
-            android:orientation="vertical" />
+        <!--<RelativeLayout-->
+            <!--android:id="@+id/toggle_bg"-->
+            <!--android:layout_width="154dp"-->
+            <!--android:layout_height="34dp"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="10.5dp"-->
+            <!--android:background="@drawable/bg_main_toggle">-->
+            <!--<TextView-->
+                <!--android:id="@+id/toggle_s_map"-->
+                <!--style="@style/ssom_font_12_white_single"-->
+                <!--android:layout_width="86dp"-->
+                <!--android:layout_height="34dp"-->
+                <!--android:background="@drawable/bg_main_toggle_on"-->
+                <!--android:text="@string/map"-->
+                <!--android:gravity="center"/>-->
+            <!--<TextView-->
+                <!--android:id="@+id/toggle_s_list"-->
+                <!--style="@style/ssom_font_12_grayish_brown_single"-->
+                <!--android:layout_width="86dp"-->
+                <!--android:layout_height="34dp"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:text="@string/list"-->
+                <!--android:gravity="center"/>-->
+        <!--</RelativeLayout>-->
 
-        <LinearLayout
-            android:layout_width="38.3dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4.2dp"
-            android:layout_marginTop="11dp"
-            android:layout_toLeftOf="@id/chat_layout"
-            android:orientation="vertical">
+        <!--<TextView-->
+            <!--android:id="@+id/chat_layout"-->
+            <!--style="@style/ssom_font_12_gray_warm"-->
+            <!--android:layout_width="34dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="11dp"-->
+            <!--android:layout_marginRight="6dp"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:drawableTop="@drawable/icon_chat"-->
+            <!--android:drawablePadding="1.5dp"-->
+            <!--android:gravity="center"-->
+            <!--android:text="5"-->
+            <!--android:orientation="vertical" />-->
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="38.3dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginRight="4.2dp"-->
+            <!--android:layout_marginTop="11dp"-->
+            <!--android:layout_toLeftOf="@id/chat_layout"-->
+            <!--android:orientation="vertical">-->
 
-                <ImageView
-                    android:id="@+id/heart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:src="@drawable/icon_heart"/>
+            <!--<FrameLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal">-->
 
-                <TextView
-                    android:id="@+id/heart_count"
-                    style="@style/ssom_font_12_white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:layout_gravity="center"
-                    android:text="5"/>
-            </FrameLayout>
+                <!--<ImageView-->
+                    <!--android:id="@+id/heart"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="4dp"-->
+                    <!--android:src="@drawable/icon_heart"/>-->
 
-            <TextView
-                android:id="@+id/heart_refill_time"
-                style="@style/ssom_font_12_gray_warm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="02:10"/>
-        </LinearLayout>
-    </RelativeLayout>
+                <!--<TextView-->
+                    <!--android:id="@+id/heart_count"-->
+                    <!--style="@style/ssom_font_12_white"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="2dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:text="5"/>-->
+            <!--</FrameLayout>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/heart_refill_time"-->
+                <!--style="@style/ssom_font_12_gray_warm"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:text="02:10"/>-->
+        <!--</LinearLayout>-->
+    <!--</RelativeLayout>-->
 
 </android.support.v7.widget.Toolbar>
