--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ssom_font_9_white">
+        <item name="android:textSize">9sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
     <style name="ssom_font_9_c8c8c8_single">
         <item name="android:textSize">9sp</item>
         <item name="android:textColor">@color/c8c8c8</item>
@@ -41,6 +47,19 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ssom_font_12_main_black">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
+    <style name="ssom_font_12_main_black_single">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="ssom_font_12_main_black_2_lines">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/main_black</item>
@@ -59,6 +78,13 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/gray_warm</item>
         <item name="android:typeface">normal</item>
+    </style>
+
+    <style name="ssom_font_12_gray_warm_2_lines">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/gray_warm</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:maxLines">2</item>
     </style>
 
     <style name="ssom_font_12_white">
@@ -81,9 +107,43 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ssom_font_12_c8c8c8_single">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/c8c8c8</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ssom_font_13_999999_single">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/custom_999999</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ssom_font_14_custom_515151_single">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/custom_515151</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ssom_font_16_custom_4d4d4d_single">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/custom_4d4d4d</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="ssom_font_16_green_blue">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/green_blue</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
+    <style name="ssom_font_16_custom_555555">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/custom_555555</item>
         <item name="android:typeface">normal</item>
     </style>
 
